fixed the issue with navbar collapse

--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,6 @@
 	margin-top:70px;
 }
 
-.navbar-inverse {
-	background:#eee;
-	border-color:#ccc;
-}
-
-.navbar-inverse a {
-	color:#333 !important;
-}
-
-.navbar-inverse.active a {
-	color:#fff !important;
-}
-
-.navbar-inverse .navbar-toggle .icon-bar {
-	background-color:#333;
-}
-
-.navbar-inverse .navbar-toggle:hover .icon-bar {
-	background-color:#fff;
-}
-
 .table-margin {
 	margin-top:20px;
 }
